--- a/scss/modules/_communication.scss
+++ b/scss/modules/_communication.scss
@@ -45,6 +45,12 @@ form {
 		background: green;
 	}
 }
+.settings {
+	div {
+		@include flex ();
+		align-items: center;
+	}
+}
 @media screen and (min-width: $br-med) {
 	.send-message {
 		flex-grow: 1;
@@ -57,6 +63,7 @@ form {
 		flex-grow: 1;
 		flex-basis: 50%;
 		max-width: 50%;
+		align-items: stretch;
 		button {
 			width: 44%;
 			display: inline-block;
@@ -73,5 +80,56 @@ form {
 			line-height: 50px;
 		}
 	}
+}
+/*SLIDER TAKEN FROM W3 SCHOOLS*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  input {display:none;}
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+	  &:before {
+	  position: absolute;
+	  content: "";
+	  height: 26px;
+	  width: 26px;
+	  left: 4px;
+	  bottom: 4px;
+	  background-color: white;
+	  -webkit-transition: .4s;
+	  transition: .4s;
+	}
+}
+input:checked + .slider {
+  background-color: $color-accent-bg;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+  &:before {
+  	border-radius: 50%;
+  }
 }
 
